# storage-adapter

./: pyproject.toml  setup.py
src/storage-adapter/: __init__.py
src/storage_adapter/: __init__.py  storage.py
